force-app/main/default/objects/TechIP_Transaction__c/TechIP_Transaction__c.object-meta.xml
<CustomObject>
    <label>TechIP Transaction</label>
    <nameField>
        <displayFormat>TIPT-{000000}</displayFormat>
        <label>TechIP Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TechIP Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>