force-app/main/default/objects/TechIP_Transaction__c/fields/Acquirer_Company__c.field-meta.xml
<CustomField>
    <fullName>Acquirer_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquirer Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TIP_Transaction_Acquirer</relationshipName>
    <type>Lookup</type>
</CustomField>