force-app/main/default/objects/TechIP_Transaction__c/fields/Assets_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Assets_Transferred__c</fullName>
    <label>Assets Transferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Copyrights</fullName>
            </value>
            <value>
                <fullName>Trade Secrets</fullName>
            </value>
            <value>
                <fullName>Patents</fullName>
            </value>
            <value>
                <fullName>Know-How</fullName>
            </value>
            <value>
                <fullName>Trade Names</fullName>
            </value>
            <value>
                <fullName>Trademarks</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Logo</fullName>
            </value>
            <value>
                <fullName>Minerals</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Web Content</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Revenue Sharing Contract</fullName>
            </value>
            <value>
                <fullName>Capital Assets</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>