force-app/main/default/objects/TechIP_Transaction__c/fields/Confidence_Rating__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Rating__c</fullName>
    <description>&quot;Confidence Rating&quot; refers to how reliable the source of the represented information is for any particular transaction. High would represent high reliability and low would represent low reliability with medium providing a midpoint between both.</description>
    <inlineHelpText>How reliable the source of the represented information is for any particular transaction.</inlineHelpText>
    <label>Confidence Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>