force-app/main/default/objects/TechIP_Transaction__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Url</type>
</CustomField>