force-app/main/default/objects/TechIP_Transaction__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IP Transaction</fullName>
            </value>
            <value>
                <fullName>Technology Transfer</fullName>
            </value>
            <value>
                <fullName>Company M&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>