force-app/main/default/objects/TechIP_Transaction__c/fields/Earnout__c.field-meta.xml
<CustomField>
    <fullName>Earnout__c</fullName>
    <label>Earnout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>