force-app/main/default/objects/TechIP_Transaction__c/fields/Estimated_Number_of_US_Applications__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_US_Applications__c</fullName>
    <label>Estimated Number of US Applications</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>