force-app/main/default/objects/TechIP_Transaction__c/fields/Number_of_Patent_Applications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Patent_Applications__c</fullName>
    <label>Number of Patent Applications</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>