force-app/main/default/objects/TechIP_Transaction__c/fields/Other_Assets_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Other_Assets_Transferred__c</fullName>
    <label>Other Assets Transferred</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>