force-app/main/default/objects/TechIP_Transaction__c/fields/Patent_Portfolio_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Patent_Portfolio_Jurisdiction__c</fullName>
    <label>Patent Portfolio Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Worldwide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>