force-app/main/default/objects/TechIP_Transaction__c/fields/Payment_Structure__c.field-meta.xml
<CustomField>
    <fullName>Payment_Structure__c</fullName>
    <label>Payment Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>