force-app/main/default/objects/TechIP_Transaction__c/fields/Target_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Target_Business_Description__c</fullName>
    <formula>TEXT(Target_Company__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Description</label>
    <type>Text</type>
</CustomField>