force-app/main/default/objects/TechIP_Transaction__c/fields/Target_Capital_IQ_Ticker__c.field-meta.xml
<CustomField>
    <fullName>Target_Capital_IQ_Ticker__c</fullName>
    <formula>Target_Company__r.CapIQ_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital IQ Ticker</label>
    <type>Text</type>
</CustomField>