force-app/main/default/objects/TechIP_Transaction__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TIP_Transaction_Target</relationshipName>
    <type>Lookup</type>
</CustomField>