force-app/main/default/objects/TechIP_Transaction__c/fields/Target_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Target_Company_Country__c</fullName>
    <formula>Target_Company__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>