force-app/main/default/objects/TechIP_Transaction__c/fields/Target_Industry__c.field-meta.xml
<CustomField>
    <fullName>Target_Industry__c</fullName>
    <formula>TEXT(Target_Company__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>