force-app/main/default/objects/TechIP_Transaction__c/fields/Target_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_SIC_Code__c</fullName>
    <formula>Target_Company__r.Sic</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Code</label>
    <type>Text</type>
</CustomField>