force-app/main/default/objects/TechIP_Transaction__c/fields/Target_SIC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Target_SIC_Code_Description__c</fullName>
    <formula>Target_Company__r.SicDesc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Code Description</label>
    <type>Text</type>
</CustomField>