force-app/main/default/objects/TechIP_Transaction__c/fields/TechIP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>TechIP_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechIP Transaction</label>
    <type>Checkbox</type>
</CustomField>