force-app/main/default/objects/TechIP_Transaction__c/fields/Technology_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Technology_Sub_Category__c</fullName>
    <label>Technology Sub-Category</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>