force-app/main/default/objects/TechIP_Transaction__c/fields/Total_Issued_Patents_US_Foreign__c.field-meta.xml
<CustomField>
    <fullName>Total_Issued_Patents_US_Foreign__c</fullName>
    <label>Total Issued Patents (US &amp; Foreign)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>