force-app/main/default/objects/TechIP_Transaction__c/fields/Total_Patent_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Patent_Assets__c</fullName>
    <label>Total Patent Assets (US &amp; Foreign)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>