force-app/main/default/objects/TechIP_Transaction__c/fields/Transaction_Comments__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Comments__c</fullName>
    <label>Transaction Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>