force-app/main/default/objects/TechIP_Transaction__c/fields/Wireframe_Created__c.field-meta.xml
<CustomField>
    <fullName>Wireframe_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wireframe Created</label>
    <type>Checkbox</type>
</CustomField>