force-app/main/default/objects/TechIP_Transaction__c/validationRules/NegativeTotalPatentAssets.validationRule-meta.xml
<ValidationRule>
    <fullName>NegativeTotalPatentAssets</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Total_Patent_Assets__c &lt; 0, true, false)</errorConditionFormula>
    <errorMessage>Total Patent Assets cannot be Negative</errorMessage>
</ValidationRule>