force-app/main/default/objects/TechIP_Transaction__c/validationRules/NegativeTransactionValue.validationRule-meta.xml
<ValidationRule>
    <fullName>NegativeTransactionValue</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Transaction_Value__c &lt; 0, true, false)</errorConditionFormula>
    <errorMessage>Transaction Value cannot be Negative</errorMessage>
</ValidationRule>