force-app/main/default/objects/TechIP_Transaction__c/validationRules/RequiredTargetOrAcquirer.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredTargetOrAcquirer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Acquirer_Company__c), ISBLANK( Target_Company__c))</errorConditionFormula>
    <errorMessage>Either a Target Company or Acquirer Company must be entered.</errorMessage>
</ValidationRule>